# subtitle-fast

./: .gitignore  Cargo.toml  README-zh.md  README.md  config.toml.example
.cargo/: config.toml
.github/workflows/: release.yml  rust-ci.yml
crates/gpui/: build.rs
crates/gpui/examples/: set_menus.rs  text.rs
crates/gpui/examples/video/: cvpixelbuffer.rs
crates/gpui/src/elements/: surface.rs
crates/gpui/src/platform/: app_menu.rs
crates/gpui/src/platform/mac/: platform.rs
crates/subtitle-fast/: Cargo.toml  README.md  build.rs
crates/subtitle-fast-comparator/: Cargo.toml  README.md
crates/subtitle-fast-comparator/examples/: bench.rs  compare_roi.rs  dump.rs
crates/subtitle-fast-comparator/src/: config.rs  lib.rs
crates/subtitle-fast-decoder/: Cargo.toml  README.md
crates/subtitle-fast-decoder/examples/: bench.rs  dump.rs  video_info.rs
crates/subtitle-fast-decoder/src/: config.rs
crates/subtitle-fast-ocr/: Cargo.toml  README.md  build.rs
crates/subtitle-fast-ocr/examples/: bench.rs  dump.rs
crates/subtitle-fast-ocr/src/: backend.rs  lib.rs
crates/subtitle-fast-ocr/src/backends/: mod.rs
crates/subtitle-fast-ocr/src/backends/ort/: mod.rs
crates/subtitle-fast-validator/: Cargo.toml  README.md
crates/subtitle-fast-validator/examples/: bench.rs  dump.rs
crates/subtitle-fast-validator/src/: lib.rs
crates/subtitle-fast-validator/src/subtitle_detection/: mod.rs
crates/subtitle-fast-validator/src/subtitle_detection/vision/: mod.rs
crates/subtitle-fast/assets/app-icon/: logo.icns
crates/subtitle-fast/assets/app-icon/Assets.xcassets/AppIcon.appiconset/: Contents.json
crates/subtitle-fast/resources/windows/: app.rc
crates/subtitle-fast/src/: cli.rs  lib.rs  main.rs  model.rs  settings.rs
crates/subtitle-fast/src/gui/: app.rs  icons.rs  menus.rs  mod.rs  session.rs
crates/subtitle-fast/src/gui/components/: color_picker.rs  config_editor.rs  confirm_dialog.rs  download_window.rs  help_window.rs  inputs.rs  menu_bar.rs  menu_bar_buttons.rs  mod.rs  sidebar.rs  subtitle_editor_window.rs  task_sidebar.rs  titlebar.rs  titlebar_actions.rs  video_controls.rs  video_luma_controls.rs  video_player.rs  video_roi_overlay.rs  video_toolbar.rs
crates/subtitle-fast/src/gui/components/detection_sidebar/: host.rs  metrics.rs  mod.rs  panel.rs  subtitles.rs
crates/subtitle-fast/src/stage/: detector.rs  lifecycle.rs  mod.rs
models/: ch_PP-OCRv5_rec_infer.config  ch_PP-OCRv5_rec_infer.txt
scripts/: build-ffmpeg-min.sh  build-linux-package.sh  build-macos-bundle.sh  build-onnxruntime.ps1  build-onnxruntime.sh  build_onnxruntime.ps1  build_onnxruntime.sh
