[workspace]
members = [
    "crates/gpui",
    "crates/subtitle-fast-types",
    "crates/subtitle-fast",
    "crates/subtitle-fast-comparator",
    "crates/subtitle-fast-decoder",
    "crates/subtitle-fast-ocr",
    "crates/subtitle-fast-validator",
]
resolver = "2"

[patch.crates-io]
gpui = { path = "crates/gpui" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
