[package]
name = "subtitle-fast-decoder"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []
backend-ffmpeg = ["dep:ffmpeg-next"]
backend-videotoolbox = []
backend-mft = []
backend-dxva = []
backend-all = [
    "backend-ffmpeg",
    "backend-videotoolbox",
    "backend-mft",
    "backend-dxva",
]

[dependencies]
subtitle-fast-types = { path = "../subtitle-fast-types" }
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1"

ffmpeg-next = { version = "8", optional = true, default-features = false, features = [
    "codec",
    "format",
    "filter",
    "software-scaling",
    "software-resampling",
    "static",
] }
parking_lot = "0.12"

[build-dependencies]
cc = "1"

[dev-dependencies]
png = "0.18"
indicatif = "0.17"
