[package]
name = "subtitle-fast-validator"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []
detector-vision = []

[dependencies]
subtitle-fast-types = { path = "../subtitle-fast-types" }
tokio = { version = "1", features = ["rt", "sync"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
serde_json = "1"
indicatif = "0.17"

[[example]]
name = "validator-bench"
path = "examples/bench.rs"

[[example]]
name = "validator-dump"
path = "examples/dump.rs"
