[package]
name = "subtitle-fast"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "subtitle-fast"
path = "src/main.rs"

[features]
default = ["gui", "detector-vision", "ocr-vision", "ocr-ort"]
gui = ["dep:gpui", "dep:anyhow", "dep:rust-embed"]
detector-vision = ["subtitle-fast-validator/detector-vision"]
ocr-vision = ["subtitle-fast-ocr/engine-vision"]
ocr-ort = ["subtitle-fast-ocr/engine-ort"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5"
futures-channel = "0.3"
futures-util = "0.3"
indicatif = "0.18"
subtitle-fast-comparator = { path = "../subtitle-fast-comparator" }
serde = { version = "1", features = ["derive"] }
subtitle-fast-decoder = { path = "../subtitle-fast-decoder" }
subtitle-fast-validator = { path = "../subtitle-fast-validator", default-features = false }
subtitle-fast-ocr = { path = "../subtitle-fast-ocr" }
subtitle-fast-types = { path = "../subtitle-fast-types" }
tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
parking_lot = "0.12"
png = "0.18"

# GUI dependencies (optional)
gpui = { version = "0.2", optional = true }
anyhow = { version = "1", optional = true }
rust-embed = { version = "8.7.2", optional = true }

[dev-dependencies]
tempfile = "3"
